fix clipping of d12 image on mobile, added flexbox, removed blue focus box in mobile, general housecleaning

--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,24 @@
 body {
 	font-family: 'Open Sans', sans-serif;
 	background-image: url("../img/linedpaper.png");
+	display: flex;
+	  align-items: center;
+	  justify-content: center;
+	  height: 100vh;
 }
 
 h1 {
 	text-align: center;
 }
 
+#lp-wrapper {
+	width: 500px;
+}
+
 #output {
+	position: relative;
 	text-align: center;
-	padding: 80px 3%;
+	padding: 64px;
 	color: #18495b;
 	background-image: url("../img/number-container.png");
 	background-size: contain;
@@ -24,7 +33,7 @@ h1 {
 	max-width: 500px;
 	width: 100%;
 	margin: 0 auto;
-	margin-bottom: 20px;
+/*	margin-bottom: 20px;*/
 	font-size: 45px;
 	font-weight: 600;
 	font-family: 'Margarine', cursive;
@@ -84,27 +93,42 @@ h1 {
 	background-image: url("../img/d20.png");
 }
 
+#d100 {
+	background-image: url("../img/d100.png");
+}
+
 .slick-dots {
 	margin-top: 60px;
 }
 
 #nav-wrapper {
-	width: 400px;
+	width: 240px;
 	margin: 0px auto;
 	margin-top: 50px;
 }
 
 .btn-nav {
-	width: 200px;
-	height: 200px;
+	width: 120px;
+	height: 120px;
 	display: block;
 	background-size: cover;
 	opacity: 0.5;
 	cursor: pointer;
+	outline: 0 none;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -moz-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .btn-nav:hover {
 	opacity: 1;
+}
+
+.btn-nav:focus {
+	outline: none;
+}
+
+.btn-nav:active:focus {
+	outline: none;
 }
 
 #btn-left {
@@ -125,6 +149,17 @@ h1 {
 	background-image: url("../img/btn-right-c.png");
 }
 
+#footer {
+	text-align: center;
+	padding: 20px 5%;
+	font-size: 10px;
+	width: 100%;
+	margin-top: 10px;
+	opacity: 0.3;
+}
+
+/*mobile*/
+
 @media (max-width: 425px) {
 	#output {
 		padding: 34px 5%;
@@ -142,20 +177,11 @@ h1 {
 		width: 200px;
 	}
 	.dice {
-		width: 200px;
-		height: 200px;
+		width: 190px;
+		height: 190px;
 		opacity: 1.0;
 	}
 	.btn-nav {
 		opacity: 1;
 	}
-}
-
-#footer {
-	text-align: center;
-	padding: 20px 5%;
-	font-size: 10px;
-	width: 100%;
-	margin-top: 10px;
-	opacity: 0.3;
 }
